--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Foof</title>
   </head>
   <body>
     <div id="root"></div>
